<resources>
    <string name="app_name">Story App</string>
    <string name="retry">Try again</string>
    <string name="title_activity_maps">Map</string>
    <string name="language_setting">Language Setting</string>
    <string name="logout">Logout %s</string>
    <string name="show_map">Show Map</string>
    <string name="show_list">Show List</string>
    <string name="unknown">Unknown</string>
    <string name="no_data">No data</string>
    <string name="story_photo">Story photo</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="input_name">Input your name</string>
    <string name="input_email">Input your email address</string>
    <string name="invalid_email_address">Email address is not valid</string>
    <string name="input_password">Input your password</string>
    <string name="password_confirmation">Confirm Password</string>
    <string name="input_password_confirmation">Retype your password</string>
    <string name="password_6_characters_or_more">Password must be 6 characters or more</string>
    <string name="new_user">New user?</string>
    <string name="register_here">Register here</string>
    <string name="register">Register</string>
    <string name="register_success">Register successful</string>
    <string name="password_is_not_equal">Passwords are not equal</string>
    <string name="congratulations_register_success">Congratulations!\nRegistration process was successful.</string>
    <string name="continue_1">Continue</string>
    <string name="add_story">Add Story</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="description">Description:</string>
    <string name="upload">Upload</string>
    <string name="please_grant_camera_permission">Please grant permission to use Camera</string>
    <string name="failed_to_take_picture">Failed to take picture.</string>
    <string name="please_add_image">Please add an image file.</string>
    <string name="success_uploading_story">Success uploading story.</string>
    <string name="take_photo">Take Photo</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="latlng">%f, %f</string>
    <string name="location_not_found">Location is not found</string>
    <string name="appwidget_text">Story App</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">Story App</string>
    <string name="use_location">Use Location</string>

    <string name="empty_text" />

    <string name="there_is_error">There are still error(s)</string>
    <string name="error_register_0101">Email is already used before</string>
    <string name="error_register_0102">Error #0102: Cannot connect to server</string>
    <string name="error_register_0103">Error #0103: Unknown error</string>
    <string name="error_login_0201">Wrong email or password</string>
    <string name="error_login_0202">Error #0202: Cannot connect to server</string>
    <string name="error_login_0203">Error #0203: Unknown error</string>
    <string name="error_list_story_0301">There\'s no story yet</string>
    <string name="error_list_story_0302">Error #0302: Cannot connect to server</string>
    <string name="error_add_story_0402">Error #0402: Cannot connect to server</string>
</resources>