<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/action_language_setting"
        android:title="@string/language_setting"
        android:icon="@drawable/ic_baseline_language_24"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_show_map"
        android:title="@string/show_map"
        android:icon="@drawable/ic_baseline_map_24"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_show_list"
        android:title="@string/show_list"
        android:icon="@drawable/ic_baseline_view_list_24"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_logout"
        android:title="@string/logout"
        app:showAsAction="never" />

</menu>