<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_login_illustration"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_baseline_person_24"
            android:layout_marginTop="32dp"
            app:tint="@color/gray_200"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/login" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            style="@style/ActivityTitle1"
            app:layout_constraintTop_toBottomOf="@id/iv_login_illustration"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_login_email"
            style="@style/RegisterAndLogin.Text"
            android:text="@string/email"
            android:labelFor="@id/ed_login_email"
            app:layout_constraintTop_toBottomOf="@+id/tv_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.dicoding.storyapp.ui.CustomEditText
            android:id="@+id/ed_login_email"
            style="@style/RegisterAndLogin.EditText"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_login_password"
            style="@style/RegisterAndLogin.Text"
            android:text="@string/password"
            android:labelFor="@id/ed_login_password"
            app:layout_constraintTop_toBottomOf="@+id/ed_login_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.dicoding.storyapp.ui.CustomEditText
            android:id="@+id/ed_login_password"
            style="@style/RegisterAndLogin.EditText"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_login_error"
            style="@style/RegisterAndLogin.TextError"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/ed_login_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            tools:text="@tools:sample/lorem" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_error" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/tv_login_new_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                android:text="@string/new_user" />

            <TextView
                android:id="@+id/tv_login_register_here"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="?attr/colorPrimary"
                android:text="@string/register_here" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/pb_login_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>