<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp" />

        <TextView
            android:id="@+id/tv_register_name"
            style="@style/RegisterAndLogin.Text"
            android:text="@string/name"
            android:labelFor="@id/ed_register_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.rinjaninet.storyapp.components.CustomEditText
            android:id="@+id/ed_register_name"
            style="@style/RegisterAndLogin.EditText"
            android:inputType="textPersonName"
            app:layout_constraintTop_toBottomOf="@+id/tv_register_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_register_email"
            style="@style/RegisterAndLogin.Text"
            android:text="@string/email"
            android:labelFor="@id/ed_login_email"
            app:layout_constraintTop_toBottomOf="@+id/ed_register_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.rinjaninet.storyapp.components.CustomEditText
            android:id="@+id/ed_register_email"
            style="@style/RegisterAndLogin.EditText"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/tv_register_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_register_password"
            style="@style/RegisterAndLogin.Text"
            android:text="@string/password"
            android:labelFor="@id/ed_register_password"
            app:layout_constraintTop_toBottomOf="@+id/ed_register_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.rinjaninet.storyapp.components.CustomEditText
            android:id="@+id/ed_register_password"
            style="@style/RegisterAndLogin.EditText"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/tv_register_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_register_password_confirmation"
            style="@style/RegisterAndLogin.Text"
            android:text="@string/password_confirmation"
            android:labelFor="@id/ed_register_password_confirmation"
            app:layout_constraintTop_toBottomOf="@+id/ed_register_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.rinjaninet.storyapp.components.CustomEditText
            android:id="@+id/ed_register_password_confirmation"
            style="@style/RegisterAndLogin.EditText"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/tv_register_password_confirmation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:isPasswordConfirmation="true" />

        <TextView
            android:id="@+id/tv_register_error"
            style="@style/RegisterAndLogin.TextError"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/ed_register_password_confirmation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            tools:text="@tools:sample/lorem" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_register_error" />

        <ProgressBar
            android:id="@+id/pb_register_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>